[tool.poetry]
name = "labgrid_test"
version = "0.1.0"
description = ""
authors = ["khoitd1997 <khoidinhtrinh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
labgrid = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
